Addressed mentor's review comments