@@ -4,14 +4,10 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.example.user.controller.dto.UserCredentials;
 import org.example.utils.BasicAuthDecoder;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.HandlerInterceptor;
 
 import java.util.Set;
-import java.util.HashSet;
-import java.util.Arrays;
-import java.util.Collections;
 
 @Component
 public class AuthInterceptor implements HandlerInterceptor {
@@ -21,10 +17,10 @@ public class AuthInterceptor implements HandlerInterceptor {
     private final Set<String> bypassPostPaths;
 
     public AuthInterceptor(BasicAuthDecoder basicAuthDecoder,
-                           @Value("${auth.bypass.post.paths}") String[] bypassPostPaths){
+                           AuthConfigurationProperties authConfigurationProperties){
         this.basicAuthDecoder = basicAuthDecoder;
-        this.bypassPostPaths = bypassPostPaths != null && bypassPostPaths.length > 0
-                ? new HashSet<>(Arrays.asList(bypassPostPaths)) : Collections.emptySet();
+        this.bypassPostPaths = authConfigurationProperties.bypassPostPaths() != null
+                ? authConfigurationProperties.bypassPostPaths() : Set.of();
     }
 
     @Override
